# EchoDB

./: PROJECT_PLAN.md  README.md  app.py  mcp_config.json  pyproject.toml  streamlit_app.py
src/: __init__.py  agent.py  config.py  main.py  main_prompts.py  types.py
src/prompts/: __init__.py  formatting.py  system.py
src/tools/: __init__.py  connect_database.py  execute_query.py  get_schema.py  get_table_sample.py
src/utils/: __init__.py  db.py
