[project]
name = "echodb"
version = "1.0.0"
description = "EchoDB: A Database Query Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.2.0",
    "langchain-litellm>=0.3.2",
]
